netflix_NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  type: NodePort
  selector:
    app: netflix-app
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30001
