ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.suman.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-loadbalancer-service
            port:
              number: 80
